--- a/План.md
+++ b/План.md
@@ -29,3 +29,5 @@
 1.0: Реализация связи клиента и сервера с адекватным UI и шифрованными видеопотоками. Windows, Linux
 
 1.1: Добавление новых платформ: Web/Android
+
+Edit - поддержка Web невозможна, т.к. Web использует протоколы не хуже чем WebRTC, а он использует DTLS, который использует TLS, который заменил устаревшший SSL. А по ТЗ пакеты должны шифроваться через SSL...
